--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,14 +7,26 @@
   <body>
     @Html.Partial("Navbar-Index")
     <div class="container">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12" id="bg"><h2>Box of Awesome-ness</h2></div>
+        <div class="container2">
+            <div class="row1">
+                <div class="col-sm-12" id="bg">
+                    <img src="images/lavender.jpg" alt="Mountain View" style="width:900px" class="lavender">
+                </div>
             </div>
-            <div class="row">
-                <div class="col-sm-4"><label class="row-title">Manage Users</label></div>
-                <div class="col-sm-4"><label class="row-title">Leave Messages</label></div>
-                <div class="col-sm-4"><label class="row-title">Edit User Information</label></div>
+            <hr>
+            <div class="row2">
+                <div class="col-sm-4">
+                    <label class="row-title">Create Content</label>
+                    <p class="row-body">Write your own posts to share with the world! Everyone has something to contribute.</p>
+                </div>
+                <div class="col-sm-4">
+                    <label class="row-title">Leave Messages</label>
+                    <p class="row-body">I need text, so I'm writing some words here to fill out things. You can leave comments on all your favorite posts and let them know what you think! Doesn't that sound fun?</p>
+                    </div>
+                <div class="col-sm-4">
+                    <label class="row-title">Edit User Information</label>
+                    <p class="row-body">As an admin you have the ability to update not only your information, but everyones! But just remember, with great power comes great responisbility.</p>
+                </div>
             </div>
         </div>
 
