--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -8,7 +8,8 @@
     @Html.Partial("Navbar-Index")
     <div class="login-container">
         <div class="login">
-            <h3 class="logreg-title">Login</h3>
+        <h3 class="update-title">Login</h3>
+        <hr class="update-hr">
             <form action="login_user" method="post">
                 <h4 class="form-titles">Email: </h4><input class="form-control" type="text" name="Email">
                 <h4 class="form-titles">Password: </h4><input class="form-control" type="password" name="Password"><br>
