--- a/Views/Register/Register.cshtml
+++ b/Views/Register/Register.cshtml
@@ -8,7 +8,8 @@
     @Html.Partial("Navbar-Index")
     <div class="login-container">
         <div class="register">
-            <h3 class="logreg-title">Register</h3>
+            <h3 class="update-title">Register</h3>
+            <hr class="update-hr">
             <form action="register_user" method="post">
                 <h5 class="form-titles">First Name: </h5><input class="form-control" type="text" name="FirstName">
                 <h5 class="form-titles">Last Name: </h5><input class="form-control" type="text" name="LastName">
