--- a/Views/Edit/EditUser-Admin.cshtml
+++ b/Views/Edit/EditUser-Admin.cshtml
@@ -1,7 +1,8 @@
 <h1>Edit User #@ViewBag.EditUser.UserId: @ViewBag.EditUser.FirstName @ViewBag.EditUser.LastName</h1>
 
     <div class="EditInfo">
-        <h3 class="update-title"><u>Edit Information</u></h3>
+        <h3 class="update-title">Edit Information</h3>
+        <hr class="update-hr">
         <form action="/UpdateUserA/@ViewBag.EditUser.UserId" method="post">
             <label class="form-titles">Email: </label><input class="form-control" type="text" name="Email" value="@ViewBag.EditUser.Email">
             <label class="form-titles">First Name: </label><input class="form-control" type="text" name="FirstName" value="@ViewBag.EditUser.FirstName">
@@ -14,13 +15,14 @@
             <input class="btn btn-success login-btn btn-block" type="submit" value="Save"><br>
         </form>
     </div>
-    <h4>@ViewBag.Errors</h1>
-    <h4>@ViewBag.Success</h1>
     <div class="ChangePassword">
-        <h3 class="update-title"><u>Change Password</u></h3>
+        <h3 class="update-title">Change Password</h3>
+        <hr class="update-hr">
         <form action="/UpdatePasswordA/@ViewBag.User.UserId" method="post">
             <label class="form-titles">Password: </label><input class="form-control" type="password" name="Password">
             <label class="form-titles">Password Confirm: </label><input class="form-control" type="password" name="PasswordC"><br>
             <input class="btn btn-success login-btn btn-block" type="submit" value="Update Password">
         </form>
     </div>
+    <h4>@ViewBag.Errors</h1>
+    <h4>@ViewBag.Success</h1>
