--- a/Views/Shared/Navbar-Index.cshtml
+++ b/Views/Shared/Navbar-Index.cshtml
@@ -1,6 +1,6 @@
 <div class="navbar navbar-default" style="margin-top:25px">
     <div class="navbar-header">
-    <a class="navbar-brand">Sparkle</a>
+    <a class="navbar-brand">Blog</a>
     </div>            
     <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
